kubernetes/apps/system/external-services/minio/service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-api
subsets:
  - addresses:
      - ip: 192.168.12.41
    ports:
      - port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-web
subsets:
  - addresses:
      - ip: 192.168.12.41
    ports:
      - port: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  ports:
    - port: &s3port 9000
      targetPort: *s3port
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-web
spec:
  ports:
    - port: &consoleport 9002
      targetPort: *consoleport
      protocol: TCP
