kubernetes/apps/system/external-services/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: internal-minio-api
spec:
  ingressClassName: internal
  rules:
    - host: &host "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: minio-api
                  number: 9000
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: internal-minio-web
spec:
  ingressClassName: internal
  rules:
    - host: &host "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: minio-web
                  number: 9002
  tls:
    - hosts:
        - *host
